[package]
name = "bevy_mod_props"
version = "3.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Bevy utilities for high-specificity programming."

[dependencies]
bevy_ecs = { version = "0.19.0", default-features = false }
thiserror = "2.0.17"
estr = "1.2.0"

[dev-dependencies]
bevy_app = "0.19.0"
bevy_asset = "0.19.0"
bevy_scene = "0.19.0"
